update request handlers, authorization, delete jwt package from vendor, update database methods, add tokens
